[package]
name = "engarde_client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num-rational = "0.4.1"
rurel = "0.5.1"
serde = { version = "1.0.197", features = ["derive"] }
serde-aux = { version = "4.5.0", default-features = false }
serde_json = "1.0.115"
serde_with = { version = "3.7.0", default-features = false, features = [
    "macros",
] }

[features]
ai = []
