[package]
name = "engarde_client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.4", features = ["derive", "cargo"] }
dfdx = { version = "0.13.0", features = ["numpy"] }
num-rational = "0.4.1"
num-traits = "0.2.19"
rurel = { version = "0.5.1", features = ["dqn"] }
serde = { version = "1.0.197", features = ["derive"] }
serde-aux = { version = "4.5.0", default-features = false }
serde_json = "1.0.115"
serde_with = { version = "3.7.0", default-features = false, features = [
    "macros",
] }

[patch.crates-io]
rurel = { path = "rurel" }

[[bin]]
name = "engarde_client"

[[bin]]
name = "q-learning"

[[bin]]
name = "dqn"
