[package]
name = "engarde_client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.4", features = ["derive", "cargo"] }
dfdx = { version = "0.13.0", features = ["numpy"] }
num-rational = "0.4.1"
num-traits = "0.2.19"
rand = "0.8.5"
rurel = { version = "0.5.1", features = ["dqn"] }
serde = { version = "1.0.197", features = ["derive"] }
serde-aux = { version = "4.5.0", default-features = false }
serde_json = "1.0.115"
serde_with = { version = "3.7.0", default-features = false, features = [
    "macros",
] }

[patch.crates-io]
rurel = { path = "rurel" }

[[bin]]
name = "engarde_client"

[[bin]]
name = "q-learning"

[[bin]]
name = "dqn"

[lints.rust]
missing_debug_implementations = "warn"
missing_docs = "warn"
unit_bindings = "warn"

[lints.clippy]

pedantic = "warn"
naive_bytecount = "allow"
must_use_candidate = "allow"

absolute_paths = "warn"
allow_attributes_without_reason = "warn"
as_conversions = "warn"
create_dir = "warn"
empty_enum_variants_with_brackets = "warn"
empty_structs_with_brackets = "warn"
float_arithmetic = "warn"
float_cmp_const = "warn"
get_unwrap = "warn"
if_then_some_else_none = "warn"
impl_trait_in_params = "warn"
infinite_loop = "warn"
lossy_float_literal = "warn"
missing_asserts_for_indexing = "warn"
mixed_read_write_in_expression = "warn"
multiple_inherent_impl = "warn"
mutex_atomic = "warn"
panic_in_result_fn = "warn"
partial_pub_fields = "warn"
print_stderr = "warn"
print_stdout = "warn"
redundant_type_annotations = "warn"
rest_pat_in_fully_bound_structs = "warn"
same_name_method = "warn"
self_named_module_files = "warn"
string_add = "warn"
string_lit_chars_any = "warn"
string_slice = "warn"
string_to_string = "warn"
suspicious_xor_used_as_pow = "warn"
tests_outside_test_module = "warn"
todo = "warn"
try_err = "warn"
undocumented_unsafe_blocks = "warn"
unimplemented = "warn"
unnecessary_self_imports = "warn"
unneeded_field_pattern = "warn"
unseparated_literal_suffix = "warn"
unwrap_in_result = "warn"
use_debug = "warn"
verbose_file_reads = "warn"
unwrap_used  = "deny"
